Added 5 day forecast

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       </div>
 
       <audio id="music" controls></audio>
+
+      <!-- New 5-day forecast -->
+      <div id="forecast" class="forecast"></div>
     </section>
   </main>
 
