Auto correct city and country names to capital letetrs and removed white bar with audio time

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button type="button" id="stop-btn">⏹️ Stop</button>
       </div>
 
-      <audio id="music" controls></audio>
+      <audio id="music"></audio>
 
       <!-- New 5-day forecast -->
       <div id="forecast" class="forecast"></div>
