--- a/index.html
+++ b/index.html
@@ -39,5 +39,18 @@
 
   <script src="config.js"></script>
   <script src="app.js"></script>
+
+  
+<div style="display: flex;">
+
+  <!-- Left sidebar -->
+  <div style="width: 200px; background:#1e1e1e; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
+    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Home</button>
+    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
+    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
+  </div>
+
 </body>
+
+
 </html>
