--- a/biography.html
+++ b/biography.html
@@ -5,9 +5,15 @@
     <title>PitBull Biography</title>
     </head>
     <body style="font-family: Arial, sans-serif; margin: 20px; background: #1e1e1e; color: #eee;">
-        <h1 style="text-align: center;">PitBull Biography</h1>
+        <div style="display: flex;">
+             <div style="width: 200px; background:#1e1e1e; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
+                <button onclick="location.href='index.html'" style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Home</button>
+                <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
+                <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
+            </div>
+        </div>    
         <div style="max-width: 800px; margin: auto; background: #222; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-            <a href="index.html" style="display: inline-block; margin-bottom: 20px; color: #4fc3f7; text-decoration: none;">&larr; Back to Home</a>
+            <h1 style="text-align: center;">PitBull Biography</h1>
             <img src="https://www.glp.at/web/assets/artists/R_2023-08-02-092040_ewse.jpg" alt="PitBull" style="width: 100%; border-radius: 8px;">
             <h2>Early Life</h2>
             <p>Armando Christian Pérez, known professionally as Pitbull, was born on January 15, 1981, in Miami, Florida. He is of Cuban descent and grew up in a bilingual household. Pitbull's early exposure to music came from his father, who was a musician himself.</p>
@@ -25,4 +31,4 @@
             <p>Beyond music, Pitbull is also known for his philanthropic efforts. He has been involved in various charitable activities, including education initiatives and disaster relief efforts. Additionally, Pitbull has ventured into business, launching his own fragrance line and partnering with brands like Bud Light and Dr Pepper.</p>
             </div>
         </body>
-        </html> 
+        </html>
