--- a/index.html
+++ b/index.html
@@ -43,19 +43,14 @@
   
 <div style="display: flex;">
 
-  <!-- Left sidebar -->
-  <div style="width: 200px; background:#1e1e1e; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
-    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Home</button>
-<<<<<<< HEAD
-    <a href="biography.html" style="text-decoration:none;">
-    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
-    </a>
-=======
-    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
->>>>>>> 6a01e2f41a1ab180bbf97738bbd8803454a7bd93
-    <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
-  </div>
+    <!-- Left sidebar -->
+    <div style="width: 200px; background:#1e1e1e; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
+      <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Home</button>
+      <button onclick="location.href='biography.html'" style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
+      <button style="padding:10px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
+    </div>
 
+  </div>
 </body>
 
 
