Add YouTube links to songs list

--- a/songs.html
+++ b/songs.html
@@ -19,15 +19,15 @@
             <div style="max-width: 800px; width:100%; background: #222; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
                 <h1 style="text-align: center;">Songs Used on this Website</h1>
                 <ul>
-                    <li>"Give Me Everything" by Pitbull ft. Ne-Yo, Afrojack, Nayer</li>
-                    <li>"Timber" by Pitbull ft. Kesha</li>
-                    <li>"On The Floor" by Jennifer Lopez ft. Pitbull</li>
-                    <li>"I Know You Want Me (Calle Ocho)" by Pitbull</li>
-                    <li>"Hotel Room Service" by Pitbull</li>
-                    <li>"Culo" by Pitbull ft. Lil Jon</li>
-                    <li>"Rain Over Me" by Pitbull ft. Marc Anthony</li>
-                    <li>"Fireball" by Pitbull ft. John Ryan</li>
-                    <li>"Feel This Moment" by Pitbull ft. Christina Aguilera</li>
+                    <li>"Give Me Everything" by Pitbull ft. Ne-Yo, Afrojack, Nayer <a href="https://www.youtube.com/watch?v=EPo5wWmKEaI" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Timber" by Pitbull ft. Kesha <a href="https://www.youtube.com/watch?v=hHUbLv4ThOo" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"On The Floor" by Jennifer Lopez ft. Pitbull <a href="https://www.youtube.com/watch?v=t4H_Zoh7G5A" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"I Know You Want Me (Calle Ocho)" by Pitbull <a href="https://www.youtube.com/watch?v=E2tMV96xULk" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Hotel Room Service" by Pitbull <a href="https://www.youtube.com/watch?v=2up_Eq6r6Ko" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Culo" by Pitbull ft. Lil Jon <a href="https://www.youtube.com/watch?v=E3VtH_t3V4c" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Rain Over Me" by Pitbull ft. Marc Anthony <a href="https://www.youtube.com/watch?v=SmM0653YvXU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Fireball" by Pitbull ft. John Ryan <a href="https://www.youtube.com/watch?v=HMqgVXSvwGo" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Feel This Moment" by Pitbull ft. Christina Aguilera <a href="https://www.youtube.com/watch?v=5jlI4uzZGjU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
                 </ul>
             </div>
         </div>
