--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <input id="city" type="text" placeholder="Search a city (e.g., Lisbon)" required />
       <button type="submit">Get Forecast</button>
     </form>
-
+    <div> 
+      <img src="https://m.media-amazon.com/images/M/MV5BMjE2OTIwMzE0MF5BMl5BanBnXkFtZTcwNjgyNjg0OQ@@._V1_FMjpg_UX1000_.jpg" style="width: 300px; max-width: 100%; border-radius: 8px; display: block; margin: 40px auto 0 auto;">
+    </div>
     <section id="result" class="card hidden">
       <div class="row">
         <div>
