--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input id="city" type="text" placeholder="Search a city (e.g., Lisbon)" required />
       <button type="submit">Get Forecast</button>
     </form>
-    <div> 
+    <div class="image-change" id="image-container"> 
       <img src="https://m.media-amazon.com/images/M/MV5BMjE2OTIwMzE0MF5BMl5BanBnXkFtZTcwNjgyNjg0OQ@@._V1_FMjpg_UX1000_.jpg" style="width: 300px; max-width: 100%; border-radius: 8px; display: block; margin: 40px auto 0 auto;">
     </div>
     <section id="result" class="card hidden">
@@ -41,8 +41,13 @@
 
   <script src="config.js"></script>
   <script src="app.js"></script>
-
-  
+  <script>  
+    // Remove the image container from the DOM when search is submitted
+    document.getElementById('search-form').addEventListener('submit', function(e){
+      var imgDiv = document.getElementById('image-container');
+      if(imgDiv) imgDiv.parentNode.removeChild(imgDiv);
+    }); // Make image disappear completely
+  </script>
 <div style="display: flex;">
 
     <!-- Left sidebar -->
