--- a/home.html
+++ b/home.html
@@ -3,16 +3,18 @@
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Welcome to Mr. WorldWideWeather</title>
+
+
+
         <link rel="stylesheet" href="style.css">
         <style>
             .quote-section {
-                position: fixed;
-                left: 0; right: 0; bottom: 0;
                 background: #171a20;
                 color: #fff;
                 padding: 24px 0 80px 0;
                 text-align: center;
                 border-top: 1px solid #2b2f36;
+                margin-top: 40px;
             }
             .quote {
                 font-size: 1.8em;
@@ -37,6 +39,11 @@
     <h1 style="text-align:center; font-size:3em; margin-top:40px;">Welcome to <br> Mr. WorldWideWeather</h1>
         <p style="text-align:center; font-size:1.4em;">Your daily dose of weather, music, and inspiration from Mr. 305 himself.</p>
     </div>
+
+<div class="image-change" id="image-container"> 
+      <img src="https://m.media-amazon.com/images/M/MV5BMjE2OTIwMzE0MF5BMl5BanBnXkFtZTcwNjgyNjg0OQ@@._V1_FMjpg_UX1000_.jpg" style="width: 300px; max-width: 100%; border-radius: 8px; display: block; margin: 40px auto 0 auto;">
+    </div>
+
     <div class="quote-section">
         <div class="quote" id="pitbull-quote"></div>
         <button class="home-btn" onclick="location.href='index.html'">Go to Home Page</button>
