--- a/home.html
+++ b/home.html
@@ -3,9 +3,6 @@
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Welcome to Mr. WorldWideWeather</title>
-
-
-
         <link rel="stylesheet" href="style.css">
         <style>
             .quote-section {
@@ -51,11 +48,19 @@
     <script>
         const pitbullQuotes = [
             "Every day above ground is a great day. Remember that.",
-            "Ask for money, and get advice. Ask for advice, get money twice.",
+             "Ask for money, and get advice. Ask for advice, get money twice.",
             "Turn a negative to a positive.",
             "Reach, dream, believe.",
             "Patience, passion, and perseverance equals success.",
-            "The only failure is not trying."
+            "The only failure is not trying.",
+            "It’s not about making it. It’s about maintaining it.",
+            "There’s no success without failure and no winning without losing.",
+            "I’m just here to motivate, inspire, and let you know that anything is possible.",
+            "No matter what you face, don’t ever let it hold you back. Always keep moving forward.",
+            "The only limits are the ones you create in your mind.",
+            "I'm that chico that'll take your girl and teach her all the right things.",
+            "Mommy got an ass like a donkey, with a monkey... look like King Kong."
+           
         ];
         function showRandomQuote() {
             const quote = pitbullQuotes[Math.floor(Math.random() * pitbullQuotes.length)];
