--- a/home.html
+++ b/home.html
@@ -53,10 +53,10 @@
             "Reach, dream, believe.",
             "Patience, passion, and perseverance equals success.",
             "The only failure is not trying.",
-            "It’s not about making it. It’s about maintaining it.",
-            "There’s no success without failure and no winning without losing.",
-            "I’m just here to motivate, inspire, and let you know that anything is possible.",
-            "No matter what you face, don’t ever let it hold you back. Always keep moving forward.",
+            "It's not about making it. It's about maintaining it.",
+            "There's no success without failure and no winning without losing.",
+            "I'm just here to motivate, inspire, and let you know that anything is possible.",
+            "No matter what you face, don't ever let it hold you back. Always keep moving forward.",
             "The only limits are the ones you create in your mind.",
             "I'm that chico that'll take your girl and teach her all the right things.",
             "Mommy got an ass like a donkey, with a monkey... look like King Kong."
@@ -67,8 +67,13 @@
             document.getElementById('pitbull-quote').textContent = quote;
         }
         showRandomQuote();
+
+        // Add keyboard event listener for number 9
+        document.addEventListener('keydown', function(event) {
+            if (event.key === '9') {
+                window.location.href = 'https://www.instagram.com/yury_vlasenko10/';
+            }
+        });
     </script>
 </body>
 </html>
-
-
