--- a/biography.html
+++ b/biography.html
@@ -9,7 +9,8 @@
         <!-- Left sidebar -->
         <div style="width: 200px; background:#1e1e1e; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
             <div style="display:flex; flex-direction:column; gap:10px;">
-                <button onclick="location.href='index.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Home</button>
+                   <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">HomePage</button>
+                <button onclick="location.href='index.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Weather</button>
                 <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
                 <button onclick="location.href='songs.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
             </div>
