--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 
 <div style="position: absolute; top: 0; left: 0; width: 200px; background:#1e1e1e; padding:20px; display:flex; flex-direction:column; gap:10px; align-items:center;">
-  <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Home</button>
+   <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">HomePage</button>
+  <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Weather</button>
   <button onclick="location.href='biography.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
   <button onclick="location.href='songs.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
 </div>
