celsius and farenheit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <main class="container">
-    <h1>🌍 MR WorldWideWeather 🎤</h1>
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+      <h1>🌍 MR WorldWideWeather 🎤</h1>
+      <button id="temp-toggle" type="button" style="padding: 8px 12px; border-radius: 20px; border: none; background: #5b9cff; color: #fff; cursor: pointer; font-size: 0.9em;">°C</button>
+    </div>
 
     <form id="search-form">
       <input id="city" type="text" placeholder="Search a city (e.g., Lisbon)" required />
