--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     </div>
 
 <div class="image-change" id="image-container"> 
-      <img src="https://m.media-amazon.com/images/M/MV5BMjE2OTIwMzE0MF5BMl5BanBnXkFtZTcwNjgyNjg0OQ@@._V1_FMjpg_UX1000_.jpg" style="width: 300px; max-width: 100%; border-radius: 8px; display: block; margin: 40px auto 0 auto;">
+      <img src="https://m.media-amazon.com/images/M/MV5BMjE2OTIwMzE0MF5BMl5BanBnXkFtZTcwNjgyNjg0OQ@@._V1_FMjpg_UX1000_.jpg" style="width: 300px; max-width: 100%; border-radius: 8px; display: block; background: #5b9cff; margin: 40px auto 0 auto;">
     </div>
 
     <div class="quote-section">
@@ -48,7 +48,7 @@
     <script>
         const pitbullQuotes = [
             "Every day above ground is a great day. Remember that.",
-             "Ask for money, and get advice. Ask for advice, get money twice.",
+            "Ask for money, and get advice. Ask for advice, get money twice.",
             "Turn a negative to a positive.",
             "Reach, dream, believe.",
             "Patience, passion, and perseverance equals success.",
