--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="container">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-      <h1>🌍 MR WorldWideWeather 🎤</h1>
+      <h1> Mr. WorldWide Weather </h1>
       <button id="temp-toggle" type="button" style="padding: 8px 12px; border-radius: 20px; border: none; background: #5b9cff; color: #fff; cursor: pointer; font-size: 0.9em;">°C</button>
     </div>
 
@@ -44,7 +44,7 @@
 
 
 <div style="position: absolute; top: 0; left: 0; width: 200px; background:#1e1e1e; padding:20px; display:flex; flex-direction:column; gap:10px; align-items:center;">
-   <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">HomePage</button>
+  <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">HomePage</button>
   <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Weather</button>
   <button onclick="location.href='biography.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
   <button onclick="location.href='songs.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
