Button fixes and Mr WorldWide

--- a/biography.html
+++ b/biography.html
@@ -4,15 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PitBull Biography</title>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; background: #1e1e1e; color: #eee;">
+<body style="font-family: Arial, sans-serif; margin: 0; background: #0f1115; color: #eee;">
     <div style="display: flex; min-height: 100vh;">
         <!-- Left sidebar -->
-        <div style="width: 200px; background:#1e1e1e; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
+        <div style="width: 200px; background:#0f1115; height:30vh; padding:20px; display:flex; flex-direction:column; gap:10px;">
             <div style="display:flex; flex-direction:column; gap:10px;">
-                   <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">HomePage</button>
-                <button onclick="location.href='index.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Weather</button>
-                <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Biography</button>
-                <button onclick="location.href='songs.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#3a3a3a; color:white; cursor:pointer;">Songs</button>
+                <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">HomePage</button>
+                <button onclick="location.href='index.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">Weather</button>
+                <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">Biography</button>
+                <button onclick="location.href='songs.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">Songs</button>
             </div>
         </div>
         <!-- Main content -->
