--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 
     <div class="quote-section">
         <div class="quote" id="pitbull-quote"></div>
-        <button class="home-btn" id = "home-btn">Go to Home Page</button>
+        <button class="home-btn" id = "home-btn">Go to Weather Page</button>
         <audio id= "pitbull-audio" src="Songs/Mr WorldWide Snippet.m4a" type="audio/mp4"></audio>
         </div>
         <div>
