--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Welcome to Mr. WorldWide Weather Weather</title>
+        <title>Welcome to Mr. WorldWide Weather</title>
         <link rel="stylesheet" href="style.css">
         <style>
             .quote-section {
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-    <h1 style="text-align:center; font-size:3em; margin-top:40px;">Welcome to <br> Mr. WorldWideWeather</h1>
+    <h1 style="text-align:center; font-size:3em; margin-top:40px;">Welcome to <br> Mr. WorldWide Weather</h1>
         <p style="text-align:center; font-size:1.4em;">Your daily dose of weather, music, and inspiration from Mr. 305 himself.</p>
     </div>
 
