--- a/index.html
+++ b/index.html
@@ -42,8 +42,49 @@
   <script src="config.js"></script>
   <script src="app.js"></script>
 
-
-<div style="position: absolute; top: 0; left: 0; width: 200px; background:#0f1115; padding:20px; display:flex; flex-direction:column; gap:10px; align-items:center;">
+<!-- Left sidebar -->
+                <style>
+                    .sidebar {
+                        width: 200px;
+                        background: #0f1115;
+                        height: 30vh;
+                        padding: 20px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+                        align-items: center;
+                        transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55);
+                        transform: translateX(-180px);
+                        position: relative;
+                        z-index: 10;
+                    }
+                    .sidebar.open {
+                        transform: translateX(0);
+                    }
+                    .sidebar-toggle {
+                        position: absolute;
+                        left: 200px;
+                        top: 30px;
+                        background: #5b9cff;
+                        color: #fff;
+                        border: none;
+                        border-radius: 50%;
+                        width: 36px;
+                        height: 36px;
+                        font-size: 1.5em;
+                        cursor: pointer;
+                        z-index: 20;
+                        box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        transition: left 0.3s cubic-bezier(.68,-0.55,.27,1.55);
+                    }
+                    .sidebar:not(.open) + .sidebar-toggle {
+                        left: 20px;
+                    }
+                </style>
+<div class="sidebar" id = "sidebar" style="position: absolute; top: 0; left: 0; width: 200px; background:#0f1115; padding:20px; display:flex; flex-direction:column; gap:10px; align-items:center;">
   <button onclick="location.href='home.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">HomePage</button>
   <button style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">Weather</button>
   <button onclick="location.href='biography.html'" style="padding:10px; width:150px; border:none; border-radius:6px; background:#5b9cff; color:white; cursor:pointer;">Biography</button>
