save before pulling

--- a/songs.html
+++ b/songs.html
@@ -32,7 +32,7 @@
                     <li style="text-align: left; margin-left: 19%;">"Feel This Moment" by Pitbull ft. Christina Aguilera <a href="https://www.youtube.com/watch?v=5jlI4uzZGjU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
                     </ul>
                     <div style="width:100%; display:flex; justify-content:center; margin-top:32px;">
-                        <img src="Images/pitbull.jfif" alt="Music related image" style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 0 8px rgba(0,0,0,0.15);">
+                        <img src="images/your-animation.gif" alt="Animated GIF" style="max-width:100%; height:auto;">
                     </div>
             </div>
                 
