--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
         // Add keyboard event listener for number 9
         document.addEventListener('keydown', function(event) {
             if (event.key === '9') {
-                window.location.href = 'https://www.instagram.com/yury_vlasenko10/';
+                window.location.href = 'https://tse2.mm.bing.net/th/id/OIP.bMJXm0fDRcMYndxz9z6cxAHaFj?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3';
             }
         });
     </script>
