Audio style css and list spacing

--- a/songs.html
+++ b/songs.html
@@ -69,21 +69,21 @@
         <!-- Main content -->
         <div style="flex: 1; display: flex; justify-content: center; align-items: center;">
             <div style="max-width: 800px; width:100%; background: #222; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-                        <h1 style="text-align: center;">Songs Used on this Website</h1>
+                        <h1 style="text-align: center; margin-bottom: 40px;">Songs Used on this Website</h1>
                         <ul style="min-height: 600px; list-style-position: inside; padding-left: 0;">
-                    <li style="text-align: left; margin-left: 19%;">"Give Me Everything" by Pitbull ft. Ne-Yo, Afrojack, Nayer <a href="https://www.youtube.com/watch?v=EPo5wWmKEaI" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"Timber" by Pitbull ft. Kesha <a href="https://www.youtube.com/watch?v=hHUbLv4ThOo" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"On The Floor" by Jennifer Lopez ft. Pitbull <a href="https://www.youtube.com/watch?v=t4H_Zoh7G5A" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"I Know You Want Me (Calle Ocho)" by Pitbull <a href="https://www.youtube.com/watch?v=E2tMV96xULk" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"Hotel Room Service" by Pitbull <a href="https://www.youtube.com/watch?v=2up_Eq6r6Ko" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"Culo" by Pitbull ft. Lil Jon <a href="https://www.youtube.com/watch?v=E3VtH_t3V4c" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"Rain Over Me" by Pitbull ft. Marc Anthony <a href="https://www.youtube.com/watch?v=SmM0653YvXU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"Fireball" by Pitbull ft. John Ryan <a href="https://www.youtube.com/watch?v=HMqgVXSvwGo" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
-                    <li style="text-align: left; margin-left: 19%;">"Feel This Moment" by Pitbull ft. Christina Aguilera <a href="https://www.youtube.com/watch?v=5jlI4uzZGjU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Give Me Everything" by Pitbull ft. Ne-Yo, Afrojack, Nayer <a href="https://www.youtube.com/watch?v=EPo5wWmKEaI" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Timber" by Pitbull ft. Kesha <a href="https://www.youtube.com/watch?v=hHUbLv4ThOo" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"On The Floor" by Jennifer Lopez ft. Pitbull <a href="https://www.youtube.com/watch?v=t4H_Zoh7G5A" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"I Know You Want Me (Calle Ocho)" by Pitbull <a href="https://www.youtube.com/watch?v=E2tMV96xULk" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Hotel Room Service" by Pitbull <a href="https://www.youtube.com/watch?v=2up_Eq6r6Ko" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Culo" by Pitbull ft. Lil Jon <a href="https://www.youtube.com/watch?v=E3VtH_t3V4c" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Rain Over Me" by Pitbull ft. Marc Anthony <a href="https://www.youtube.com/watch?v=SmM0653YvXU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Fireball" by Pitbull ft. John Ryan <a href="https://www.youtube.com/watch?v=HMqgVXSvwGo" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
+                    <li>"Feel This Moment" by Pitbull ft. Christina Aguilera <a href="https://www.youtube.com/watch?v=5jlI4uzZGjU" target="_blank" style="color:#4fc3f7;">[YouTube]</a></li>
                     </ul>
-                    <div style="width:100%; display:flex; justify-content:center; margin-top:32px;">
-                        <img src="images/your-animation.gif" alt="Animated GIF" style="max-width:100%; height:auto;">
-                    </div>
+                    <audio controls style="position: absolute; top: 80px; left: 100px;">
+                        <source src="Songs/Feel This Moment - PitBull.m4a" type="audio/mp4">
+                    </audio>
             </div>
                 
         </div>
