--- a/biography.html
+++ b/biography.html
@@ -71,7 +71,7 @@
             <div style="max-width: 800px; width:100%; background: #222; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
                 <h1 style="text-align: center;">PitBull Biography</h1>
                 <img src="https://www.glp.at/web/assets/artists/R_2023-08-02-092040_ewse.jpg" alt="PitBull" style="width: 300px; max-width: 100%; border-radius: 8px; display: block; margin: 0 auto;">
-                <audio controls src="Songs/Feel This Moment - PitBull.m4a">
+                <audio controls style="display:block; margin: 20px auto; width :100%; max-width:400px;">
                     <source src="Songs/Feel This Moment - PitBull.m4a" type="audio/mp4">
                 </audio>
                 <p style="text-align: center;">Feel This Moment" by Pitbull ft. Christina Aguilera </p>
