--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
   .sidebar:not(.open) + .sidebar-toggle {
     left: 20px;
   }
+   body.day-theme .sidebar {
+    background: rgba(255,255,255,0.9);
+  }
+
+  body.day-theme .sidebar button {
+    background: linear-gradient(45deg, #FFA500, #FF6347);
+    color: #2c3e50;
+  }
+
+  body.night-theme .sidebar {
+    background: #0f1115;
+  }
+
+  body.night-theme .sidebar button {
+    background: #5b9cff;
+    color: #fff;
+  }
 </style>
 
 <div class="sidebar" id = "sidebar" >
